--- a/Dance.html
+++ b/Dance.html
@@ -3,6 +3,8 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="ClassDemo1.css"/>
 	<title>SAP</title>
+	<link href='https://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div id="Device">
@@ -11,14 +13,14 @@
 		***************************************-->
 		<div id="Device-Top" class="landing-div">
 			<a href="Sidebar.html">
-			<img src="https://cdn4.iconfinder.com/data/icons/wirecons-free-vector-icons/32/menu-alt-256.png"/>
+			<img src="http://www.roofingsouthwest.com/i/mobile/menu_icon.png"/>
 		</a>
 			<a href="Search.html">
-			<img style="margin-left:1px;" src="http://www.fwnewman.org/images/Times/magnifying_glass.png"/>
+			<img style="margin-left:1px;" src="http://www.clker.com/cliparts/D/k/0/U/i/k/search-icon-red-md.png"/>
 		</a>
-			<span id="SAP-Title"> SAP </span>
+			<span id="SAP-Title">SAP</span>
 			<a href="Landing.html">
-			<img style="margin-left:70px;" src="https://notesfromthetarmac.files.wordpress.com/2011/09/home.png"/>
+			<img style="margin-left:70px;" src="http://www.iconsdb.com/icons/preview/red/home-5-xxl.png"/>
 		</a>		
 		</div>
 
