--- a/Landing.html
+++ b/Landing.html
@@ -43,8 +43,9 @@
 						<center> <img src="http://vignette2.wikia.nocookie.net/dreamworks/images/0/06/Wallpaper-001.jpg/revision/latest?cb=20130902150920" 
 						alt="some_text" style="width:200px;height:128px;"> <center> <!--Addams family picture-->
 				<center><h1> Run Dates</h1><center> 
-					<button type="Shrek.html" value="More Info">More Info</button>
-					</form>
+				<form action="Shrek.html">
+   					<input type="submit" value="More Info">
+				</form>
 			</div>
 				<div class="menu-item">
 					<center> <h2>Middle School Dance Project<h2> <center>
