--- a/MSDanceTickets.html
+++ b/MSDanceTickets.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="ClassDemo1.css"/>
-	<title>MSDance</title>
+	<title>SAP</title>
+	<link href='https://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div id="Device">
@@ -11,35 +13,31 @@
 		***************************************-->
 		<div id="Device-Top" class="landing-div">
 			<a href="Sidebar.html">
-			<img src="https://cdn4.iconfinder.com/data/icons/wirecons-free-vector-icons/32/menu-alt-256.png"/>
+			<img src="http://www.roofingsouthwest.com/i/mobile/menu_icon.png"/>
 		</a>
 			<a href="Search.html">
-			<img style="margin-left:1px;" src="http://www.fwnewman.org/images/Times/magnifying_glass.png"/>
+			<img style="margin-left:1px;" src="http://www.clker.com/cliparts/D/k/0/U/i/k/search-icon-red-md.png"/>
 		</a>
-			<span id="SAP-Title"> SAP </span>
+			<span id="SAP-Title">SAP</span>
 			<a href="Landing.html">
-			<img style="margin-left:70px;" src="https://notesfromthetarmac.files.wordpress.com/2011/09/home.png"/>
+			<img style="margin-left:70px;" src="http://www.iconsdb.com/icons/preview/red/home-5-xxl.png"/>
 		</a>		
 		</div>
+
 
 		<!--*************************************************-->
 		<div id="Screen"> <!--Most of your work will below this-->
 
 			<div class="menu-item">
-					<center> <h2>Middle School Dance Project<h2> <center>
-						<center> <img src="https://saasphotogallery.smugmug.com/Arts/Dance/2015-Dance-Show/i-kN7j9Jd/0/L/20150422SAAS-002-L.jpg" 
-						alt="some_text" style="width:200px;height:128px;"> <center> <!--Addams family picture-->
+					<center> <h2>Middle School Dance Tickets<h2> <center>
+						<center> <img src="https://saasphotogallery.smugmug.com/Arts/Dance/2015-Dance-Show/i-c69KnLF/0/L/20150422SAAS-051-L.jpg" 
+						alt="some_text" style="width:220px;height:160px;"> <center> <!--Addams family picture-->
 				<center><h3>Run Dates</h3><center>
 		</div>
-
 			<!--********************************************-->
 
-			<div id="Screen-foot-do-not-change">
-				<!-- Do not edit this div.  It keeps the screen above the "power button" SINGLE BUTTONS-->
-					<center> <form action="MSDanceTickets.html">
-   						<input type="submit" value="Tickets">
-						</form> <center>
-					<center> <form action="Landing.html">
+			<div id="Screen-foot-do-not-change"> <!-- Do not edit this div.  It keeps the screen above the "power button"-->
+						<center> <form action="MSDance.html">
    						<input type="submit" value="Go Back">
 						</form> <center>
 			</div> 
